2006-10-03  Roland Dreier  <rdreier@cisco.com>

	* src/cmd.c (ibv_cmd_get_context_v2, ibv_cmd_get_context)
	(ibv_cmd_query_device, ibv_cmd_query_port, ibv_cmd_alloc_pd)
	(ibv_cmd_reg_mr, ibv_cmd_create_cq_v2, ibv_cmd_create_cq)
	(ibv_cmd_poll_cq, ibv_cmd_resize_cq, ibv_cmd_destroy_cq)
	(ibv_cmd_create_srq, ibv_cmd_create_qp, ibv_cmd_post_send)
	(ibv_cmd_post_recv, ibv_cmd_post_srq_recv, ibv_cmd_create_ah)
	(ibv_cmd_destroy_qp): Annotate so that Valgrind knows responses
	are defined after write() succeeds.  The kernel writes into the
	response structure directly, so without these, Valgrind thinks
	that response structures are undefined memory.  This is based on
	patches and suggestions by Rainer Keller <keller@hlrs.de>, Jeff
	Squyres <jsquyres@cisco.com> and Siqing Fan.

	* src/ibverbs.h: Add wrapper for VALGRIND_MAKE_MEM_DEFINED so that
	it can be used in .c files without worrying about whether Valgrind
	is installed or enabled.

	* configure.in: Add support for Valgrind annotation (enabled with
	--with-valgrind option to configure).

	* src/cmd.c (ibv_cmd_query_port, ibv_cmd_create_cq,
	ibv_cmd_modify_qp): Set reserved fields to 0 to avoid future
	problems and also to make Valgrind a little quieter.

2006-07-04  Roland Dreier  <rdreier@cisco.com>

	* include/infiniband/arch.h: Fix typo in sparc mb()
	implementation: the asm should just be empty -- the "sync"
	instruction was mistakenly cut and pasted from the ppc version.

2006-06-01  Roland Dreier  <rdreier@cisco.com>

	* src/device.c (ibv_get_device_list): Actually return a
	NULL-terminated array as the documentation promises.

2006-05-31  Roland Dreier  <rdreier@cisco.com>

	* src/init.c (find_drivers), src/device.c (ibv_open_device): Fix
	memory leaks: the result of asprintf() needs to be freed when
	we're done with it.

	* examples/asyncwatch.c (event_name_str): Print human-readable
	form of IBV_EVENT_CLIENT_REREGISTER.

2006-05-31  Leonid Arsh  <leonida@voltaire.com>
