@@ -1,3 +1,13 @@
+2006-10-17  Roland Dreier  <rdreier@cisco.com>
+
+	* include/infiniband/arch.h: Update i386 and x86_64 memory barrier
+	macros to be more than compiler barriers, to guard against
+	out-of-order speculative reads.
+
+	* include/infiniband/arch.h: Add rmb() and wmb() macros in
+	addition to the full mb(), so that low-level drivers can ask for
+	weaker ordering if that's all that is needed.
+	
 2006-10-03  Roland Dreier  <rdreier@cisco.com>
 
 	* src/cmd.c (ibv_cmd_get_context_v2, ibv_cmd_get_context)
